# coldrawdb

./: .gitignore  achitect.md  compose.yml  database_design.json  package.json  vite.config.js
.specstory/history/: 2025-05-17_07-45-项目分析讨论.md  2025-06-03_02-59-解决系统依赖报错.md
backend/: .env  Cargo.toml  config.toml  database_design.json  init.sql
backend/src/: init.rs  main.rs
backend/src/common/: mod.rs
backend/src/diagrams/: mod.rs
backend/src/entity/: area.rs  diagram.rs  diagram_link.rs  field.rs  indice.rs  indice_link.rs  mod.rs  note.rs  prelude.rs  reference.rs  table.rs  table_link.rs  task.rs
backend/src/entity/dto/: field.rs
backend/src/entity/vo/: area_vo.rs  diagram_vo.rs  indice_vo.rs  mod.rs  note_vo.rs  reference_vo.rs  table_vo.rs  task_add_vo.rs  task_update_vo.rs  task_vo.rs
backend/src/error/: mod.rs
backend/src/indices/: internal_api.rs
backend/src/notes/: internal_api.rs  mod.rs
backend/src/references/: internal_api.rs  mod.rs
backend/src/tables/: internal_api.rs  mod.rs
backend/src/todos/: mod.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/db/: init.rs  mod.rs
src-tauri/src/db/models/: common.rs  diagram.rs  mod.rs  task.rs  template.rs
src/components/: Workspace.jsx
src/components/EditorHeader/Modal/: Modal.jsx
src/components/EditorSidePanel/TablesTab/: SearchBar.jsx
src/context/: DiagramContext.jsx
src/utils/: apiExamples.js  requestApi.js
