[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
once_cell = "1.19"
thiserror = "1.0"
sea-orm = { version = "0.12", features = ["runtime-tokio-rustls", "sqlx-sqlite", "macros", "with-chrono", "with-json", "with-rust_decimal", "with-uuid"] }
tokio = { version = "1.0", features = ["full"] }
lazy_static = "1.4"
rs-snowflake = "0.6.0"
